--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-Hello World !
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Thibault Sulem | Home page</title>
+</head>
+<body>
+    <h1>Welcome</h1>
+    <h2>Thibault Sulem</h2>
+
+    <h3>Sample Web Pages</h3>
+
+    <p><a href="front-end/exo1.html">A Tale of Two Cities</a></p>
+    <p><a href="front-end/exo2.html">IBAT Chocolates</a></p>
+    <p><a href="front-end/exo3.html">Prince & Purple Rain</a></p>
+    <p><a href="front-end/exo4.html">Lorem Ipsum Text</a></p>
+    
+</body>
+</html>
