--- a/front-end/exo2.html
+++ b/front-end/exo2.html
@@ -23,6 +23,6 @@
     
     <p>Ingredients: Cocoa beans and organic sugar.</p> 
 
-    <p><a href="index.html">Back to Home page</a></p>
+    <p><a href="../index.html">Back to Home page</a></p>
 </body>
 </html>
