--- a/front-end/exo1.html
+++ b/front-end/exo1.html
@@ -30,6 +30,6 @@
     
     <p><i>Charles Dickens</i> , published by <b>Chapman & Hall</b> in 1859.</p> 
 
-    <p><a href="index.html">Back to Home page</a></p>
+    <p><a href="../index.html">Back to Home page</a></p>
 </body>
 </html>
