--- a/front-end/exo4.html
+++ b/front-end/exo4.html
@@ -30,6 +30,6 @@
 
 <p><b>Text Source</b>: <i>Lorem Ipsum, a placeholder text commonly used to demonstrate the visual form of a document or a typeface without relying on meaningful content</i>.</p>
 
-<p><a href="index.html">Back to Home page</a></p>
+<p><a href="../index.html">Back to Home page</a></p>
 </body>
 </html>
