--- a/index.html
+++ b/index.html
@@ -2,20 +2,33 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Thibault Sulem | Home page</title>
+    <title>Thibault Sulem</title>
+    <meta name="description" content="Freelance Web and Digital Developer crafting innovative online experiences on the web and social media.">
+    <link rel="stylesheet" href="assets/css/global.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="exercises/assets/img/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="exercises/assets/img/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="exercises/assets/img/favicon-16x16.png">
+    <link rel="manifest" href="exercises/assets/img/site.webmanifest">
 </head>
 <body>
-    <h1>Welcome</h1>
-    <h2>Thibault Sulem</h2>
+<h1>Hi, I'm Thibault Sulem</h1>
 
-    <h3>Sample Web Pages</h3>
+<h2>Web / UI Designer</h2>
 
-    <p><a href="front-end/exo1.html">A Tale of Two Cities</a></p>
-    <p><a href="front-end/exo2.html">IBAT Chocolates</a></p>
-    <p><a href="front-end/exo3.html">Prince & Purple Rain</a></p>
-    <p><a href="front-end/exo4.html">Lorem Ipsum Text</a></p>
-    
+<p>I created this website to showcase some of my recent web design work.</p>
+
+<img src="assets/img/home-page.jpg" alt="Home page image">
+
+<p><a href="exo/exo1.html">A Tale of Two Cities</a></p>
+<p><a href="exo/exo2.html">IBAT Chocolates</a></p>
+<p><a href="exo/exo3.html">Prince & Purple Rain</a></p>
+<p><a href="exo/exo4.html">Lorem Ipsum Text</a></p>
+<p><a href="exo/exo5.html">Vincent van Gogh</a></p>
+<p><a href="exo/exo6.html">Irish Tourism</a></p>
+<p><a href="exo/exo7.html">Smoothies</a></p>
+<p><a href="exo/exo8.html">Software Analytics</a></p>
+<p><a href="exo/exo9.html">The Box Model</a></p>
+<p><a href="exo/exo10.html">Web Page With Panels</a></p>
 </body>
 </html>
